--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_navigation_graph"
+    app:startDestination="@id/characterListFragment"
 >
 
+    <fragment
+        android:id="@+id/characterListFragment"
+        android:name="nl.stephanmantel.starwars.characterlist.CharacterListFragment"
+        android:label="CharacterListFragment" />
 </navigation>
