Set character list font to Poller One

--- a/app/src/main/res/layout/list_item_character.xml
+++ b/app/src/main/res/layout/list_item_character.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="BB-8"
-    />
+        android:fontFamily="@font/poller_one"
+        tools:text="BB-8" />
 
 </LinearLayout>
