--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -21,7 +21,7 @@
         />
 
     <Button
-        android:id="@+id/sortByBirthDateButton"
+        android:id="@+id/sortByAgeButton"
         android:text="birthdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
