--- a/app/src/main/res/layout/list_item_character.xml
+++ b/app/src/main/res/layout/list_item_character.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <ToggleButton
+        android:id="@+id/favouriteToggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="favourite"
+        android:textColor="#fff"
+        android:background="#dfa"
+        />
 
     <TextView
         android:id="@+id/nameTextView"
