Add detail fragment to navigation graph

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation_graph"
-    app:startDestination="@id/characterListFragment"
->
+    app:startDestination="@id/characterListFragment">
 
     <fragment
         android:id="@+id/characterListFragment"
         android:name="nl.stephanmantel.starwars.characterlist.CharacterListFragment"
-        android:label="CharacterListFragment" />
+        tools:layout="@layout/fragment_character_list"
+        android:label="CharacterListFragment" >
+        <action
+            android:id="@+id/action_characterListFragment_to_characterDetailFragment"
+            app:destination="@id/characterDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/characterDetailFragment"
+        android:name="nl.stephanmantel.starwars.characterdetail.CharacterDetailFragment"
+        tools:layout="@layout/fragment_character_detail"
+        android:label="CharacterDetailFragment" />
 </navigation>
