Observe data for character details

--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:textColor="#930000"
+        android:textColor="@color/errorMessageColor"
         android:layout_gravity="center"
         tools:visibility="visible"
         tools:text="Somehing went wrong"
