--- a/app/src/main/res/layout/list_item_character.xml
+++ b/app/src/main/res/layout/list_item_character.xml
@@ -9,15 +9,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poller_one"
-        android:textColor="@color/colorAccent"
-        android:textSize="20sp"
-        tools:text="BB-8" />
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/geostar_fill"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp"
+            tools:text="BB-8" />
+
         <TextView
             android:id="@+id/ageTextView"
             android:layout_width="wrap_content"
@@ -26,6 +32,8 @@
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
             tools:text="157" />
+
+    </LinearLayout>
 
     <CheckBox
         android:id="@+id/favouriteToggle"
