--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -5,13 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/characterNameTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        tools:text="Han Solo"
-    />
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:id="@+id/characterNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            tools:text="Han Solo"
+            />
+
+        <link.fls.swipestack.SwipeStack
+            android:id="@+id/swipeStack"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            />
+
+    </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/loadingIndicator"
